# EMerge

./: .bumpversion.toml  .gitignore  README.md  pyproject.toml
examples/: DielectricRod.step  demo0_parallel_plate.py  demo10_sgh.py  demo11_lumped_element_filter.py  demo12_mode_alignment.py  demo13_helix_antenna.py  demo14_boundary_selection.py  demo15_strip_slotline_transition.py  demo16_differential_common_mode.py  demo17_step_import.py  demo18_plotting_and_visualization.py  demo19_vivaldi_antenna.py  demo1_stepped_imp_filter.py  demo2_combline_filter.py  demo3_coupled_line_filter.py  demo4_patch_antenna.py  demo5_revolve.py  demo6_striplines_with_vias.py  demo7_periodic_cells.py  demo8_waveguide_bpf_synthesis.py  demo9_dielectric_resonator.py
src/emerge/: __init__.py  cli.py  plot.py
src/emerge/_emerge/: bc.py  cacherun.py  const.py  coord.py  cs.py  dataset.py  emerge_update.py  geometry.py  logsettings.py  mesh3d.py  mesher.py  periodic.py  selection.py  settings.py  simmodel.py  simstate.py  solver.py
src/emerge/_emerge/backend/: datasets.py
src/emerge/_emerge/geo/: __init__.py  operations.py  pcb.py  pmlbox.py  polybased.py  step.py
src/emerge/_emerge/geo/pcb_tools/: calculator.py  dxf.py  macro.py
src/emerge/_emerge/mth/: common_functions.py  loopsplit.py  optimized.py
src/emerge/_emerge/physics/microwave/: adaptive_mesh.py  microwave_3d.py  microwave_bc.py  microwave_data.py  sc.py
src/emerge/_emerge/physics/microwave/assembly/: assembler.py
src/emerge/_emerge/plot/: simple_plots.py
src/emerge/_emerge/plot/pyvista/: display.py  utils.py
src/emerge/_emerge/solve_interfaces/: cudss_interface.py  mumps_interface.py
src/emerge/_emerge/solve_interfaces/pymumps/: __init__.py  _dmumps.pyx  _zmumps.pyx
src/emerge/auxilliary/: touchstone.py
src/emerge/beta/: dxf.py  gerber.py
src/emerge/beta/_gerber/: excellon.py  filepcb.py  gerber.py
