[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "emerge"
version = "1.2.1"
description = "An open source EM FEM simulator in Python"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "gmsh>=4.13.0, <4.14.0",
    "joblib>=1.5.1",
    "loguru>=0.7.3",
    "matplotlib>=3.8.0",
    "numba>=0.57.0; platform_system != \"Linux\"",
    "numba>=0.57.0, <=0.60.0; platform_system==\"Linux\"",
    "numpy>=1.24, <2.3",
    "pyvista>=0.45.2",
    "scipy>=1.14.0",
    "mkl!=2024.0; platform_machine == \"x86_64\" or platform_machine == \"AMD64\"",
]

[project.scripts]
emerge = "emerge.cli:main"

[tool.hatch.build.targets.sdist.sources]
"src/emerge"  = "emerge"

[project.optional-dependencies]
umfpack = [
  "scikit-umfpack; sys_platform != 'win32'",
]
cudss = [
  "nvidia-cudss-cu12==0.5.0.16",
  "nvmath-python[cu12]==0.5.0",
  "cupy-cuda12x"
]
cudss12 = [
  "nvidia-cudss-cu12==0.5.0.16",
  "nvmath-python[cu12]==0.5.0",
  "cupy-cuda12x"
]
dxf = [
  "ezdxf"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pipdeptree>=2.28.0",
    "pytest>=8.4.1",
    "scikit-umfpack>=0.4.2",
    "threadpoolctl>=3.6.0",
]

[tool.uv]
no-build-isolation-package = ["cchardet"]

[project.urls]
Homepage = "https://github.com/FennisRobert/EMerge"
Issues = "https://github.com/FennisRobert/EMerge/issues"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
publish-url = "https://test.pypi.org/legacy"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--ignore=trial_scripts"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = [
  "ignore:.*SwigPyPacked.*:DeprecationWarning",
  "ignore:.*SwigPyObject.*:DeprecationWarning",
  "ignore:.*swigvarlink.*:DeprecationWarning",
]
